--- a/index.html
+++ b/index.html
@@ -4,229 +4,174 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Freeflow — po prostu zamów</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    :root{
+      --bg:#0b0b0c; --panel:#141417; --muted:#9aa0a6; --text:#e6e6e6;
+      --accent:#25d366; --danger:#ff6b6b; --ring:#2a2a2e;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; background:var(--bg); color:var(--text);
+      font:16px/1.5 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      display:flex; align-items:flex-start; justify-content:center;
+    }
+    .wrap{width:100%; max-width:860px; padding:28px 18px 64px}
+    h1{font-size:clamp(28px,5vw,48px); line-height:1.1; margin:18px 0 6px}
+    .lead{color:var(--muted); font-size:clamp(16px,2.5vw,18px); margin:0 0 28px}
+    .card{background:var(--panel); border:1px solid var(--ring); border-radius:18px; padding:18px}
+    .row{display:flex; gap:12px; align-items:center; flex-wrap:wrap}
+    .mic{
+      width:52px; height:52px; border-radius:50%;
+      border:1px solid var(--ring); background:#0e0e12; display:grid; place-items:center;
+      cursor:pointer; transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease
+    }
+    .mic.on{box-shadow:0 0 0 3px rgba(37,211,102,.25); border-color:#3bd07f}
+    .mic svg{width:22px; height:22px; fill:#c9d1d9}
+    input[type=text]{
+      flex:1; min-width:220px; padding:14px 16px; border-radius:12px;
+      background:#0f0f13; border:1px solid var(--ring); color:var(--text);
+      outline:none; transition:border-color .12s ease;
+    }
+    input[type=text]:focus{border-color:#3bd07f}
+    button{
+      padding:12px 18px; border-radius:12px; border:none; font-weight:600; cursor:pointer;
+      background:var(--accent); color:#04140a; transition:transform .08s ease, filter .08s ease
+    }
+    button:active{transform:translateY(1px)}
+    .hint{color:var(--muted); margin-top:8px}
+    .err{color:var(--danger)}
+    .log{margin-top:18px; border-top:1px solid var(--ring); padding-top:14px}
+    .badge{display:inline-block; font-size:12px; padding:2px 8px; border-radius:999px; background:#1b1b20; color:#b6beca; border:1px solid var(--ring)}
+    pre{white-space:pre-wrap; word-break:break-word; background:#0f0f13; border:1px solid var(--ring); padding:12px; border-radius:12px; margin:10px 0 0; max-height:260px; overflow:auto}
+    .fade{animation:fade .25s ease}
+    @keyframes fade{from{opacity:.4; transform:translateY(2px)} to{opacity:1; transform:none}}
+  </style>
 </head>
-<body class="bg-neutral-950 text-white">
-  <main class="min-h-screen flex flex-col items-center">
-    <!-- HERO -->
-    <section class="w-full max-w-3xl px-5 pt-16 pb-6 text-center">
-      <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight">
-        Freeflow <span class="opacity-80">— po prostu zamów</span>
-      </h1>
-      <p class="mt-3 text-neutral-300">
-        Powiedz, czego potrzebujesz: „dwie pizze w Krakowie o 20:00”, „zamów taxi na 18:30”, „nocleg w Warszawie”.
-      </p>
-    </section>
+<body>
+  <main class="wrap">
+    <h1>Freeflow — po prostu zamów</h1>
+    <p class="lead">Powiedz, czego potrzebujesz: „dwie pizze w Krakowie o 20:00”, „zamów taxi na 18:30”, „nocleg w Warszawie”.</p>
 
-    <!-- BOX ZAMÓWIENIA -->
-    <section class="w-full max-w-3xl px-5">
-      <div class="rounded-2xl bg-black/30 backdrop-blur border border-white/10 p-5">
-        <div class="flex items-center gap-3">
-          <button id="micBtn"
-                  class="shrink-0 rounded-full p-4 bg-emerald-500/20 border border-emerald-400/30 hover:bg-emerald-500/30 transition"
-                  title="Włącz mikrofon">
-            🎤
-          </button>
-          <input id="queryInput" type="text" inputmode="text"
-                 placeholder="Powiedz lub wpisz zamówienie…"
-                 class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 outline-none focus:border-emerald-400"/>
-          <button id="sendBtn"
-                  class="rounded-xl px-4 py-3 bg-emerald-500 text-black font-semibold hover:bg-emerald-400 transition">
-            Wyślij
-          </button>
+    <section class="card fade">
+      <div class="row">
+        <div class="mic" id="micBtn" title="Włącz/wyłącz nasłuch">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 14a3 3 0 0 0 3-3V6a3 3 0 1 0-6 0v5a3 3 0 0 0 3 3zm5-3a5 5 0 0 1-10 0H5a7 7 0 0 0 6 6.92V20H8v2h8v-2h-3v-2.08A7 7 0 0 0 19 11h-2z"/></svg>
         </div>
-
-        <div id="hint" class="mt-3 text-sm text-neutral-400">
-          Próba automatycznego włączenia mikrofonu… Jeśli prośba o uprawnienie się nie pojawi, kliknij „🎤”.
-        </div>
-
-        <div id="status" class="mt-3 text-xs text-neutral-400"></div>
-
-        <div id="result" class="mt-5 hidden">
-          <h3 class="font-semibold text-neutral-200">Wynik</h3>
-          <pre id="json" class="mt-2 text-xs bg-white/5 border border-white/10 rounded-lg p-3 overflow-x-auto"></pre>
-        </div>
+        <input id="query" type="text" placeholder="Powiedz lub wpisz" />
+        <button id="sendBtn">Wyślij</button>
+      </div>
+      <div class="hint" id="hint">Mikrofon włączony. Mów śmiało!</div>
+      <div class="log" id="log" hidden>
+        <span class="badge">Odpowiedź</span>
+        <pre id="out"></pre>
       </div>
     </section>
-
-    <!-- KOSZYK / POTWIERDZENIE (prosty placeholder na dziś) -->
-    <section class="w-full max-w-3xl px-5 mt-6">
-      <div id="confirmBox" class="hidden rounded-2xl bg-black/30 backdrop-blur border border-white/10 p-5">
-        <h3 class="font-semibold text-neutral-200">Potwierdzenie</h3>
-        <p id="confirmText" class="mt-2 text-neutral-300"></p>
-      </div>
-    </section>
-
-    <footer class="mt-auto py-10 text-xs text-neutral-500">
-      Bez profilowania. Sesja tymczasowa. © Freeflow
-    </footer>
   </main>
 
-<script>
-(() => {
-  // ====== KONFIG ======
-  const HOST = 'https://freeflow-backend-vercel.vercel.app';
-  const ENDPOINTS = {
-    plan:  `${HOST}/api/plan`,
-    tts:   `${HOST}/api/tts`,
-    places:`${HOST}/api/places`,
-  };
+  <script>
+    // <<< SKONFIGURUJ HOST BACKENDU >>>
+    const HOST = 'https://freeflow-backend-vercel.vercel.app'; // <— TU WSTAW SWÓJ DZIAŁAJĄCY HOST
 
-  // ====== STAN SESJI (bez profilowania) ======
-  const sessionId = (() => {
-    const k = 'ff_session';
-    let v = sessionStorage.getItem(k);
-    if (!v) { v = crypto.randomUUID(); sessionStorage.setItem(k, v); }
-    return v;
-  })();
+    // —— UI
+    const micBtn  = document.getElementById('micBtn');
+    const sendBtn = document.getElementById('sendBtn');
+    const input   = document.getElementById('query');
+    const hint    = document.getElementById('hint');
+    const logBox  = document.getElementById('log');
+    const out     = document.getElementById('out');
 
-  // ====== ELEMENTY UI ======
-  const micBtn = document.getElementById('micBtn');
-  const queryInput = document.getElementById('queryInput');
-  const sendBtn = document.getElementById('sendBtn');
-  const statusEl = document.getElementById('status');
-  const resultWrap = document.getElementById('result');
-  const jsonEl = document.getElementById('json');
-  const hintEl = document.getElementById('hint');
-  const confirmBox = document.getElementById('confirmBox');
-  const confirmText = document.getElementById('confirmText');
-
-  // ====== NARZĘDZIA ======
-  const speakLocal = (text) => {
-    try {
-      const u = new SpeechSynthesisUtterance(text);
-      u.lang = 'pl-PL';
-      window.speechSynthesis.cancel();
-      window.speechSynthesis.speak(u);
-    } catch {}
-  };
-
-  const speakFromBackend = async (text) => {
-    try {
-      const r = await fetch(ENDPOINTS.tts, {
-        method: 'POST',
-        headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({ text, lang: 'pl-PL' }),
-      });
-      if (!r.ok) throw new Error('TTS HTTP ' + r.status);
-      const blob = await r.blob();
-      const url = URL.createObjectURL(blob);
-      const a = new Audio(url);
-      await a.play();
-    } catch (e) {
-      // fallback do TTS przeglądarki
-      speakLocal(text);
-    }
-  };
-
-  const showStatus = (msg) => { statusEl.textContent = msg || ''; };
-  const showResult = (obj) => {
-    resultWrap.classList.remove('hidden');
-    jsonEl.textContent = JSON.stringify(obj, null, 2);
-  };
-
-  // ====== ROZPOZNAWANIE MOWY (Web Speech API) ======
-  let recognizing = false;
-  let recognition;
-
-  const initRecognition = () => {
+    // —— STT (przeglądarka)
+    let rec, listening = false;
+    const hasSTT = 'webkitSpeechRecognition' in window || 'SpeechRecognition' in window;
     const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
-    if (!SR) return null;
-    const rec = new SR();
-    rec.lang = 'pl-PL';
-    rec.interimResults = false;
-    rec.maxAlternatives = 1;
 
-    rec.onstart = () => { recognizing = true; showStatus('Słucham… powiedz zamówienie.'); micBtn.classList.add('ring-2','ring-emerald-400'); };
-    rec.onend   = () => { recognizing = false; micBtn.classList.remove('ring-2','ring-emerald-400'); };
-    rec.onerror = (e) => { recognizing = false; showStatus('Błąd mikrofonu: ' + (e.error || 'nieznany')); };
-
-    rec.onresult = async (ev) => {
-      const transcript = ev.results[0][0].transcript.trim();
-      queryInput.value = transcript;
-      showStatus(`Rozpoznano: “${transcript}”`);
-      await handleQuery(transcript);
-    };
-
-    return rec;
-  };
-
-  const startMic = async () => {
-    try {
-      // Wymusza prompt uprawnień w części przeglądarek
-      await navigator.mediaDevices.getUserMedia({ audio: true });
-    } catch {}
-    try {
-      if (!recognition) recognition = initRecognition();
-      if (recognition && !recognizing) recognition.start();
-    } catch (e) {
-      showStatus('Nie mogę uruchomić rozpoznawania mowy. Kliknij „🎤”.');
+    function startRec(){
+      if(!hasSTT || listening) return;
+      rec = new SR();
+      rec.lang = 'pl-PL';
+      rec.interimResults = false;
+      rec.onstart  = () => { listening = true; micBtn.classList.add('on'); hint.textContent = 'Słucham… powiedz zamówienie.'; };
+      rec.onerror  = () => { hint.innerHTML = 'Błąd rozpoznawania mowy. Możesz też <b>wpisać</b> treść.'; stopRec(); };
+      rec.onend    = () => { listening = false; micBtn.classList.remove('on'); if(input.value.trim()==='') hint.textContent='Powiedz lub wpisz zamówienie.'; };
+      rec.onresult = (e) => {
+        const t = Array.from(e.results).map(r=>r[0].transcript).join(' ').trim();
+        if(t) { input.value = t; send(); }
+      };
+      try { rec.start(); } catch {}
     }
-  };
+    function stopRec(){ try{ rec && rec.stop(); }catch{} listening=false; micBtn.classList.remove('on'); }
 
-  // ====== OBSŁUGA ZAPYTANIA ======
-  async function handleQuery(text) {
-    const q = (text || queryInput.value || '').trim();
-    if (!q) { showStatus('Podaj treść zamówienia.'); return; }
+    // auto-start nasłuchu po first-paint (jeśli przeglądarka pozwoli)
+    window.addEventListener('load', () => setTimeout(()=>startRec(), 300));
 
-    showStatus('Przetwarzam zamówienie…');
-    confirmBox.classList.add('hidden');
+    micBtn.addEventListener('click', () => listening ? stopRec() : startRec());
 
-    try {
-      const res = await fetch(ENDPOINTS.plan, {
-        method: 'POST',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify({ query: q, sessionId }),
+    // —— HELPERS
+    function show(data){
+      logBox.hidden = false;
+      out.textContent = typeof data === 'string' ? data : JSON.stringify(data, null, 2);
+    }
+    async function call(path, body){
+      const r = await fetch(HOST + path, {
+        method:'POST',
+        headers:{'Content-Type':'application/json'},
+        body: JSON.stringify(body||{})
       });
-      const data = await res.json();
-
-      if (!res.ok) {
-        showStatus((data && data.error) ? `Błąd: ${data.error}` : `Błąd: HTTP ${res.status}`);
-        showResult(data || {});
-        return;
+      if(!r.ok){
+        let msg='Błąd połączenia';
+        try{ const j=await r.json(); msg=j.error||JSON.stringify(j); }catch{}
+        throw new Error(msg);
       }
-
-      showResult(data);
-      // proste potwierdzenie
-      confirmText.textContent = `OK. Zrozumiałem: ${q}. Krok: ${data.steps?.[0]?.message || '—'}`;
-      confirmBox.classList.remove('hidden');
-
-      // mówimy do użytkownika
-      await speakFromBackend('Zamówienie przyjęte. ' + (data.steps?.[0]?.message || ''));
-
-      showStatus('Gotowe.');
-    } catch (e) {
-      showStatus('Błąd połączenia.');
-    }
-  }
-
-  // ====== ZDARZENIA ======
-  sendBtn.addEventListener('click', () => handleQuery());
-  micBtn.addEventListener('click', () => startMic());
-  queryInput.addEventListener('keydown', (e) => {
-    if (e.key === 'Enter') handleQuery();
-  });
-
-  // ====== START: auto-instrukcja + próba auto-mikrofonu ======
-  const startup = async () => {
-    const intro = 'Freeflow — po prostu zamów. Powiedz na głos swoje zamówienie.';
-    // mówimy od razu (to zwykle działa bez gestu)
-    speakLocal(intro);
-    // spróbuj włączyć mikrofon automatycznie (może wymagać gestu – wtedy pokaż hint)
-    try {
-      await startMic();
-      hintEl.textContent = 'Mikrofon włączony. Mów śmiało!';
-    } catch {
-      hintEl.textContent = 'Kliknij ikonę 🎤, aby włączyć mikrofon.';
+      return r.json();
     }
 
-    // plan B: pierwszy dotyk w dowolnym miejscu również odpali mikrofon
-    const oneTap = () => { startMic(); window.removeEventListener('pointerdown', oneTap); };
-    window.addEventListener('pointerdown', oneTap, { once: true });
-  };
+    // —— GŁÓWNY PRZEPŁYW
+    async function send(){
+      const q = (input.value||'').trim();
+      if(!q){ hint.innerHTML = '<span class="err">Podaj treść zamówienia.</span>'; return; }
+      hint.textContent = 'Przetwarzam…';
 
-  window.addEventListener('DOMContentLoaded', startup);
-})();
-</script>
+      try {
+        const plan = await call('/api/plan', { query: q });
+
+        // reakcje na limity/guardy z backendu
+        if(plan.status === 'error' && plan.error === 'rate_limited'){
+          hint.innerHTML = '<span class="err">Za dużo próśb. Spróbuj za chwilę.</span>';
+          show(plan);
+          return;
+        }
+        if(plan.status === 'error'){
+          hint.innerHTML = '<span class="err">' + (plan.error || 'Błąd zapytania') + '</span>';
+          show(plan);
+          return;
+        }
+
+        show(plan);
+
+        // spróbuj odtworzyć krótki TTS z podsumowaniem
+        const summary =
+          plan?.steps?.[0]?.message ||
+          'Zapisano zamówienie w Freeflow.';
+        try {
+          const tts = await call('/api/tts', { text: summary, lang: 'pl-PL' });
+          if(tts && tts.url){
+            const a = new Audio(tts.url);
+            a.play().catch(()=>{ /* autoplay może zostać zablokowany */ });
+          }
+        } catch {/* TTS opcjonalny */}
+
+        hint.textContent = 'Gotowe. Możesz dodać kolejne zamówienie.';
+        input.value = '';
+        // po odpowiedzi znów włącz lekko nasłuch
+        setTimeout(()=>startRec(), 400);
+      } catch (e){
+        hint.innerHTML = '<span class="err">' + (e.message || 'Błąd połączenia') + '</span>';
+      }
+    }
+
+    sendBtn.addEventListener('click', send);
+    input.addEventListener('keydown', (e)=>{ if(e.key==='Enter') send(); });
+  </script>
 </body>
 </html>
