--- a/index.html
+++ b/index.html
@@ -2,54 +2,64 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Freeflow — po prostu zamów</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>FreeFlow — po prostu zamów</title>
+  <meta name="color-scheme" content="dark light" />
+
+  <!-- Konfiguracja (frontend) -->
+  <meta name="gmaps-proxy" content="/api/places" />
+  <meta name="gpt-proxy"   content="/api/gpt" />
+  <!-- TTS: /api/tts na tym samym hostcie -->
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="hero">
-    <h1>Freeflow — po prostu zamów</h1>
-    <p class="tagline">
-      Powiedz, czego potrzebujesz: „dwie pizze w Krakowie o 20:00”, „zamów taxi na 18:30”, „nocleg w Warszawie”.
-    </p>
-  </header>
+  <div class="page" id="app">
+    <header class="topbar">
+      <div>
+        <div class="brand"><b>Free</b><span>Flow</span></div>
+        <div class="tagline">Voice to order — Złóż zamówienie</div>
+        <div class="subtag">Restauracja, taxi albo hotel?</div>
+      </div>
+      <div class="actions">
+        <div class="chip" aria-label="Menu" title="Menu">≡</div>
+        <div class="chip" style="position:relative" aria-label="Koszyk" title="Koszyk">🛒
+          <span class="cart-badge" id="cartCount">0</span>
+        </div>
+      </div>
+    </header>
 
-  <main class="container">
-    <!-- KAFELKI -->
-    <section class="tiles">
-      <button class="tile" data-example="dwie pizze w Krakowie o 20:00">
-        <div class="tile-emoji">🍕</div>
-        <div class="tile-title">Jedzenie</div>
-        <div class="tile-sub">Pizzeria / restauracja</div>
-      </button>
-      <button class="tile" data-example="zamów taxi z Dworca Głównego do Kazimierza o 18:30 jutro">
-        <div class="tile-emoji">🚕</div>
-        <div class="tile-title">Taxi</div>
-        <div class="tile-sub">Start → Cel + godzina</div>
-      </button>
-      <button class="tile" data-example="potrzebuję noclegu w Warszawie 2 noce od piątku">
-        <div class="tile-emoji">🏨</div>
-        <div class="tile-title">Hotel</div>
-        <div class="tile-sub">Miasto + daty</div>
-      </button>
+    <section class="stage">
+      <div class="logoWrap" id="logoWrap">
+        <!-- podmień ścieżkę na swoje logo -->
+        <img src="assets/Freeflowlogo.png" alt="FreeFlow" width="840" height="1080" />
+        <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
+      </div>
+
+      <!-- Pasek transkrypcji + sterowanie -->
+      <div class="asr" id="asrBox" role="status" aria-live="polite">
+        <div class="dot" id="dot"></div>
+        <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
+        <button class="micBtn" id="micBtn" title="Start/Stop" aria-label="Start/Stop">🎤</button>
+      </div>
+
+      <!-- Ręczny tekst + Wyślij -->
+      <div class="inputRow">
+        <input id="textInput" type="text" inputmode="text" autocomplete="off" spellcheck="false"
+               placeholder="Powiedz lub wpisz" />
+        <button id="sendBtn" class="sendBtn">Wyślij</button>
+      </div>
+
+      <div id="banner" class="banner hidden"></div>
     </section>
 
-    <!-- INPUT + MIKROFON -->
-    <section class="composer">
-      <button id="micBtn" title="Mów"><span>🎤</span></button>
-      <input id="query" type="text" placeholder="Powiedz lub wpisz" />
-      <button id="sendBtn">Wyślij</button>
-    </section>
+    <nav class="dock" aria-label="Kategorie">
+      <button class="tile active" id="tileFood"><span class="i">🍽️</span><span>Jedzenie</span></button>
+      <button class="tile" id="tileTaxi"><span class="i">🚕</span><span>Taxi</span></button>
+      <button class="tile" id="tileHotel"><span class="i">🏡</span><span>Hotel</span></button>
+    </nav>
+  </div>
 
-    <!-- STATUS + WYNIKI -->
-    <section class="status" id="status"></section>
-    <section class="result" id="result"></section>
-  </main>
-
-  <footer class="foot">
-    Bez profilowania. Sesja tylko w pamięci przeglądarki.
-  </footer>
-
-  <script src="app.js"></script>
+  <script src="app.js" defer></script>
 </body>
 </html>
