--- a/index.html
+++ b/index.html
@@ -5,105 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>FreeFlow — po prostu zamów</title>
   <meta name="color-scheme" content="dark light" />
-
-  <!-- Konfiguracja endpointów -->
+  <!-- KONFIG: zmień tylko jeśli backend jest na innym hoście -->
   <meta name="gmaps-proxy" content="/api/places" />
   <meta name="gpt-proxy"   content="/api/gpt" />
-
-  <style>
-    :root{
-      --glass-bg: rgba(20,20,22,.55);
-      --glass-brd: rgba(255,255,255,.12);
-      --glass-blur: 18px;
-      --text: #f6f7fb;
-      --muted:#c7c9d1;
-      --brand:#ff8a30;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; color:var(--text);
-      font:500 16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial;
-      background:#0d0f13 url(assets/Background.png) center/cover fixed no-repeat;
-      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-    }
-    .page{
-      min-height:100dvh; display:flex; flex-direction:column; gap:16px;
-      padding:clamp(12px,2vw,24px);
-      padding-bottom:calc(24px + env(safe-area-inset-bottom));
-      background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
-    }
-    /* topbar */
-    .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
-    .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
-    .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
-    .brand span{font-weight:900; font-size:clamp(24px,4.5vw,36px)}
-    .tagline{color:var(--muted); font-size:clamp(14px,2.6vw,16px); margin-top:4px}
-    .subtag{color:var(--muted); font-size:clamp(12px,2.2vw,14px); opacity:.9; margin-top:2px}
-    .actions{display:flex; gap:10px}
-    .chip{
-      width:44px; height:44px; display:grid; place-items:center; border-radius:14px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur))
-    }
-    .cart-badge{
-      position:absolute; transform:translate(14px,-14px); background:#ff9e3d; color:#101217; font-weight:800;
-      min-width:26px; height:26px; padding:0 6px; border-radius:999px; display:grid; place-items:center;
-      font-size:13px; border:2px solid #11151b
-    }
-    /* stage */
-    .stage{display:grid; place-items:center; margin:clamp(8px,3vw,16px) 0 0}
-    .logoWrap{
-      position:relative; width:min(82vw,420px); user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
-      filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))
-    }
-    .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
-    .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0; cursor:pointer}
-    .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
-    @keyframes pulse{
-      0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)}
-      50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}
-    }
-    /* ASR row */
-    .asr{
-      margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,820px); border-radius:20px; padding:18px 20px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
-      display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)
-    }
-    .dot{width:10px; height:10px; border-radius:999px; background:#86e2ff; box-shadow:0 0 16px #86e2ff}
-    .text{flex:1; min-height:1.2em}
-    .ghost{color:var(--muted)}
-    .micBtn{
-      width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
-      background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14)); display:grid; place-items:center; cursor:pointer
-    }
-    /* input row */
-    .inputRow{
-      width:min(92vw,820px); margin:10px auto 0; display:flex; gap:10px; align-items:center
-    }
-    #textInput{
-      flex:1; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
-      background:var(--glass-bg); color:var(--text); padding:0 14px; outline:none; backdrop-filter:blur(var(--glass-blur))
-    }
-    #textInput::placeholder{color:var(--muted)}
-    .sendBtn{
-      height:46px; padding:0 16px; border-radius:14px; border:1px solid var(--glass-brd);
-      background:#2fe38718; color:#e8ffe8; font-weight:800; cursor:pointer
-    }
-    /* dock */
-    .dock{margin-top:clamp(16px,3.8vh,30px); display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
-    .tile{
-      display:flex; align-items:center; gap:12px; min-width:150px; padding:14px 18px; border-radius:22px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur)); color:#fff; font-weight:700
-    }
-    .tile .i{font-size:22px}
-    .tile.active{outline:2px solid rgba(33,212,253,.6)}
-    /* banner */
-    .banner{
-      width:min(92vw,820px); margin:10px auto 0; padding:10px 12px; border-radius:12px; border:1px solid var(--glass-brd);
-      background:rgba(72,179,255,.12); color:#dff1ff; font-size:14px
-    }
-    .hidden{display:none!important}
-  </style>
+  <!-- /api/tts na tym samym hoście -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="page" id="app">
@@ -127,7 +33,7 @@
         <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
-      <div class="asr" id="asrBox" role="status" aria-live="polite">
+      <div class="asr" role="status" aria-live="polite">
         <div class="dot" id="dot"></div>
         <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
         <button class="micBtn" id="micBtn" title="Start/Stop" aria-label="Start/Stop">🎤</button>
@@ -149,10 +55,6 @@
     </nav>
   </div>
 
-<script>
-/* -------- JS (pełna logika) -------- */
-// (tu wklej cały app.js który dawałem wcześniej, bez zmian)
-// Uwaga: w całości mieści się w tym pliku, zachowuje funkcjonalność mikrofonu, inputa, bannerów i TTS.
-</script>
+  <script src="app.js" defer></script>
 </body>
 </html>
