--- a/index.html
+++ b/index.html
@@ -1,57 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>FreeFlow — zamów głosem</title>
-  <meta name="color-scheme" content="dark light" />
-
-  <!-- USTAW backend (tu: Twój Vercel) -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- BACKEND ENDPOINTS -->
   <meta name="gmaps-proxy" content="https://freeflow-backend-vercel.vercel.app/api/places" />
   <meta name="gpt-proxy"   content="https://freeflow-backend-vercel.vercel.app/api/gpt" />
-  <!-- TTS w app.js wołamy pod: https://freeflow-backend-vercel.vercel.app/api/tts -->
+  <title>FreeFlow</title>
 
-  <meta http-equiv="referrer" content="strict-origin-when-cross-origin" />
+  <!-- JEDEN arkusz -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Preload tła (dopasowane do /Freeflo/assets/Background.png) -->
+  <link rel="preload" href="/Freeflo/assets/Background.png" as="image" />
 </head>
 <body>
-  <div class="page" id="app">
-    <header class="topbar">
-      <div>
-        <div class="brand"><b>Free</b><span>Flow</span></div>
-        <div class="tagline">Voice to order — Złóż zamówienie</div>
-        <div class="subtag">Restauracja, taxi albo hotel?</div>
-      </div>
-      <div class="actions">
-        <div class="chip" aria-label="Menu" title="Menu">≡</div>
-        <div class="chip" style="position:relative" aria-label="Koszyk" title="Koszyk">
-          🛒 <span class="cart-badge" id="cartCount">0</span>
-        </div>
-      </div>
-    </header>
-
-    <section class="stage">
-      <div class="logoWrap" id="logoWrap">
-        <img src="assets/Freeflowlogo.png?v=1" alt="FreeFlow" width="840" height="1080" />
-        <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
-      </div>
-
-      <div class="asr" id="asrBox" role="status" aria-live="polite">
-        <div class="dot" id="dot"></div>
-        <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
-        <button class="micBtn" id="micBtn" title="Start/Stop" aria-label="Start/Stop">🎤</button>
-      </div>
-
-      <div id="banner" class="banner hidden"></div>
-    </section>
-
-    <nav class="dock" aria-label="Kategorie">
-      <button class="tile active" id="tileFood"><span class="i">🍽️</span> <span>Jedzenie</span></button>
-      <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
-      <button class="tile" id="tileHotel"><span class="i">🏡</span> <span>Hotel</span></button>
-    </nav>
+  <!-- Pasek nawigacji (menu/koszyk) -->
+  <div style="position:fixed; top:10px; right:12px; z-index:3; display:flex; gap:8px;">
+    <button aria-label="Menu"
+      style="backdrop-filter:blur(8px); background:rgba(13,15,20,.45); border:1px solid rgba(255,255,255,.10); color:#e6edf3; padding:10px 12px; border-radius:12px; cursor:pointer;">≡</button>
+    <button aria-label="Koszyk"
+      style="backdrop-filter:blur(8px); background:rgba(13,15,20,.45); border:1px solid rgba(255,255,255,.10); color:#e6edf3; padding:10px 12px; border-radius:12px; cursor:pointer;">🛒 <span>0</span></button>
   </div>
 
-  <script src="app.js" defer></script>
+  <header>
+    <!-- Klikalne logo (mikrofon) -->
+    <div id="logoBtn" title="Naciśnij i mów">🎤</div>
+  </header>
+
+  <main>
+    <!-- Transkrypcja -->
+    <div id="transcript">Powiedz, co chcesz zamówić…</div>
+
+    <!-- Kafelki (jedna linia) -->
+    <div id="tiles">
+      <button id="tileFood">🍔 Jedzenie</button>
+      <button id="tileTaxi">🚕 Taxi</button>
+      <button id="tileHotel">🏨 Hotel</button>
+    </div>
+
+    <!-- Banner z wynikami/komunikatami -->
+    <div id="banner" class="hidden"></div>
+  </main>
+
+  <!-- Stabilna logika produkcyjna -->
+  <script src="freeflow-assistant.js"></script>
 </body>
 </html>
